public/styles/layout.css
/*
 * http://www.paulirish.com/2012/box-sizing-border-box-ftw/
 * https://css-tricks.com/international-box-sizing-awareness-day/
 * Do not modify these two selectors, please
 */
 /* CSS for Desktop Version */
 @media (min-width: 800px) {
   #container {
     display: flex;
     gap: 20px;
   }
 
   #tweet-header {
     flex: 1;
     padding: 20px;
   }
 
   #tweets-container {
     flex: 2;
     padding: 20px;
   }
 }
 
 /* CSS for Mobile Version */
 @media (max-width: 800px) {
   #container {
     display: flex;
     flex-direction: column;
   }
 
   #tweet-header,
   #tweets-container {
     padding: 20px;
   }
 }

 
html {
  box-sizing: border-box;
}
*, *:before, *:after {
  box-sizing: inherit;
}

/*
 * Global layout stuff
 */



body {
  color: #545149;
  background-color: #f4f1ec;
  font-size: 24px;
  font-family: "Source Sans 3", sans-serif;
}

#logo {
  font-family: "Bungee", sans-serif;
  display: flex;

}

#rhs {
  display: flex;
  flex-flow: column;
  align-items: center;
}

.fa-solid fa-angle-double-down {
  fill: red;
}

main {
  width: 90%;
  margin: 0 auto;
  background-color: inherit;
}


.new-tweet {
  padding-top: 20px;
  padding-right: 15px;
}

label {
  display: block;
  margin-bottom: 10px;
}

textarea {
  width: 100%;
  height: 100px;
  padding: 5px;
  word-wrap: break-word;
}

button {
  background-color: #4056A1;
  color: white;
  font-family: "Bungee", sans-serif;
  padding: 10px 20px;
  border: none;
  cursor: pointer;
}

.counter {
  float: right;
  font-family: "Bungee";
}

hr {
  border: none;
  border-top: 1px solid black;
  margin: 20px 0;
}

.red {
  color: red;
}

.tweet {
  border: 1px solid black;
  display: flex;
  flex-direction: column;
  padding: 10px;
  position: relative;
}

.tweet:hover {
  box-shadow: 0 0 5px rgba(0, 0, 0, 0.3); 
}

#tweet-header {
  background-color: orange;
  display: flex;
  flex-direction: column;
  align-items: center;

  padding-top: 200px;
  padding-left: 20px;
  padding-right: 20px;
}

nav {
  position: fixed;
  top: 0;
  left: 0;
  width: 100%;
}

.tweet-profile {
  display: flex;
  justify-content: space-between; /* updated */
  align-items: center;
}



.tweet-author {
  color: lightgrey;
}

.tweet-timestamp {
  color: grey;
}

.tweet-actions {
  display: flex;
  align-items: center;
  justify-content: flex-start; 
  margin-top: 5px; 
}

.tweet-actions i {
  margin-right: 10px; 
  color: #999; 
  cursor: pointer;
  transition: color 0.2s; 
}

.tweet-actions i:hover {
  color: #4056A1; 
}

.tweet-action {
  margin-left: 5px;
  font-size: 12px;
}

.tweet-hover {
  box-shadow: 0 0 5px rgba(0, 0, 0, 0.3);
}

.tweet-hover {
  box-shadow: 0 0 5px rgba(0, 0, 0, 0.3);
}

.tweet-hover a img {
  filter: invert(0%);
  transition: filter 0.3s ease;
}

.tweet-hover a:hover img {
  filter: invert(50%);
}


.error-message {
  color: red;
  font-size: 14px;
  display: none;
}

.tweet:hover {
  box-shadow: 0 0 5px rgba(0, 0, 0, 0.3);
}

